--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
 #requirements.txt
 snowflake-snowpark-python
 streamlit
+python=3.8.*
 
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.8.*
-  - snowflake-snowpark-python=
+
+
   
